# Shiku-AI-Powered-Sales-Developemnt-Representative

./: .dockerignore  .env.azure.example  .env.example  .gitignore  Dockerfile  PRESENTATION.md  README.md  docker-compose.yml  implementation.md  main.py  pyproject.toml  render.yaml  start.sh
config/: llm_pricing.json  logging.py  settings.py
db/: schema.sql  schema_pg.sql  seed.sql  seed_pg.sql
docs/: DEPLOY_AWS.md  DEPLOY_AZURE.md  DEPLOY_VERCEL_RENDER.md  LLM_ROUTING_AND_BILLING.md  design-decisions.md  evaluation-criteria.md  security-review.md
email_monitor/: __init__.py  agent.py  data_utils.py  email_response.py  email_sender.py  intent_extractor.py  monitor.py  response_evaluator.py  security.py  server.py  webhook_utils.py
frontend/: next.config.ts  package-lock.json  package.json
migrations/: 001_initial_schema.md  002_add_monitor_reply_approval_toggle.sql  003_add_llm_usage_events.sql  004_add_tenancy_and_mailboxes.sql  005_scheduling_sequences_exports.sql  006_add_organization_timezone.sql  007_scope_core_tables_by_organization.sql  008_scope_llm_usage_by_organization.sql  009_tenant_resend_mailboxes.sql  010_subscription_plans.sql  011_campaign_lead_contexts.sql  012_add_usage_metering_ledgers.sql  013_add_campaign_draft_performance_indexes.sql  014_add_platform_runtime_settings.sql  015_add_campaign_llm_routing_mode.sql  016_add_organization_llm_credentials.sql  017_plan_routing_entitlements.sql  018_subscription_manual_status_and_market_pricing.sql  019_tenant_lookup_performance_indexes.sql  020_restrict_starter_llm_routing.sql  README.md  (+5 more)
(+136 files in other folders)
